test/errors/error5.sp
% numeric range contains an undefined constant.
sorts
#s=4..c5. % because the range starts from 4 it is understood as a numeric range.
          % later, at the time when c1 is parse, it is considered as undefined constant.    
predicates
rules
